2006-12-04  Thomas Wood  <thos@gnome.org>

	* themes/Mist/gtk-2.0/gtkrc: Use gtk-color-scheme

2006-11-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_radiobutton):
	- Don't draw the bullet in the inconsistent state.

2006-11-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	- Draw Evolution ETree headers as headers instead of buttons.

2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_frame): Support rounded corners correctly.

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_extension):
	- Set the corners correctly in the widget parameters
	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_tab):
	- Use the corners value from the parameters

	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_draw_button_gloss), (clearlooks_glossy_draw_button):
	- removed fill option from clearlooks_draw_button_gloss

2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
	- Don't use parentbg, but always bg[STATE]

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap):
	- Fill the notebook background with bg[NORMAL]

2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_spinbutton),
	(clearlooks_draw_optionmenu), (clearlooks_draw_separator):
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_button):
	- Add some cairo_save/restore pairs
	- clearlooks_draw_option_menu now uses the separator routine
	- draw_spinbutton and optionmenu used the fact that drawing the
	button modified the cairo context.
	- pixel align the end of the separator lines

	* engines/clearlooks/src/clearlooks_style.c: